--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.2.0",
-    "line-by-line": "^0.1.3"
+    "line-by-line": "^0.1.3",
+    "mongodb": "^2.0.33"
   }
 }
