--- a/NBA_Project_Eclipse/.classpath
+++ b/NBA_Project_Eclipse/.classpath
@@ -32,5 +32,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="C:/Users/Giuseppe/Desktop/mongo-hadoop-core_2.2.0-1.2.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Giuseppe/Downloads/aws-java-sdk-1.3.14.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
